# tibetan-translation

./: .gitignore  README.md  clean_outputs.py  config.py  file_handler.py  input.txt  pyproject.toml  requirements.txt  sdom-gsum-tibetan copy 2.txt  summary_output.txt  translate.py  translation_client.py  translation_manager.py
src/: translation_manager.py
tests/: translation_client_test.py
tibetan_translation/: lamdre-translation.md
